--- a/content/data_science/2024-fall/Tutorial.ipynb
+++ b/content/data_science/2024-fall/Tutorial.ipynb
@@ -13,7 +13,7 @@
    "id": "a154aa4a-94f9-4e2a-92f7-5565093161a4",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/GLI-Lab/jupyterlite/blob/main/content/pyodide/altair.ipynb)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/GLI-Lab/jupyterlite/blob/main/content/data_science/2024-fall/Tutorial.ipynb)\n",
     "\n",
     "ref: https://cs231n.github.io/python-numpy-tutorial/"
    ]
@@ -100,9 +100,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 4, 4, 4, 4, 4, 4, 4, 5, 5, 5, 5, 5, 5, 5, 5, 6, 6, 6, 6, 6, 6, 6, 6, 6, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 9, 9, 9, 9, 9, 9, 9, 9, 10, 10, 10, 10, 10, 10, 10, 11, 11, 11, 11, 11, 11, 11]\n",
-      "CPU times: user 5.04 ms, sys: 30 μs, total: 5.07 ms\n",
-      "Wall time: 4.99 ms\n"
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 7, 7, 7, 7, 7, 7, 7, 7, 7, 8, 8, 8, 8, 8, 8, 8, 8, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 10, 10]\n",
+      "CPU times: user 5.5 ms, sys: 0 ns, total: 5.5 ms\n",
+      "Wall time: 5.42 ms\n"
      ]
     }
    ],
@@ -131,8 +131,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 4, 4, 4, 4, 4, 4, 4, 5, 5, 5, 5, 5, 5, 5, 5, 6, 6, 6, 6, 6, 6, 6, 6, 6, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 9, 9, 9, 9, 9, 9, 9, 9, 10, 10, 10, 10, 10, 10, 10, 11, 11, 11, 11, 11, 11, 11]\n",
-      "CPU times: user 2.2 s, sys: 2.47 ms, total: 2.2 s\n",
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 7, 7, 7, 7, 7, 7, 7, 7, 7, 8, 8, 8, 8, 8, 8, 8, 8, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 10, 10]\n",
+      "CPU times: user 2.2 s, sys: 0 ns, total: 2.2 s\n",
       "Wall time: 2.2 s\n"
      ]
     }
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "875a52eb-f608-4bfe-9394-afec53f71b70",
    "metadata": {},
    "outputs": [],
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "f38de6ae-bbcb-4468-a2e8-51abed982ba1",
    "metadata": {},
    "outputs": [
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "b454a8e8-f37e-4a78-b98b-32b775bfcd23",
    "metadata": {},
    "outputs": [
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "65430810-3f16-4e6b-8d48-8cb9014ae310",
    "metadata": {},
    "outputs": [
@@ -876,8 +876,8 @@
       " [7 7]]\n",
       "[[1. 0.]\n",
       " [0. 1.]]\n",
-      "[[0.23737528 0.08038301]\n",
-      " [0.12986759 0.26916734]]\n"
+      "[[0.10820736 0.93265503]\n",
+      " [0.2792792  0.97664304]]\n"
      ]
     }
    ],
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "9c299651-5066-42ee-b4dc-86699a3823d7",
    "metadata": {},
    "outputs": [
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "3cdbbd1d-08f7-4362-ab7a-c585a6d81d82",
    "metadata": {},
    "outputs": [
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "5de92eda-f656-453d-9b15-54ca1249e176",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "82d63852-50f8-4619-ab7c-b25a9bcef727",
    "metadata": {},
    "outputs": [
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "2e019e97-0758-4bb4-9964-49535ad473fa",
    "metadata": {},
    "outputs": [
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "3fd51ef8-1640-4875-ae5a-35e9d0033be0",
    "metadata": {},
    "outputs": [
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "aff2ddbb-e06d-44b4-882d-3f1f23b0a0b5",
    "metadata": {},
    "outputs": [],
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "b3c8ce53-e865-424d-b6d7-098e6a46e8ff",
    "metadata": {},
    "outputs": [
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "a0b0b0b4-0091-462f-848c-b6b1ca559891",
    "metadata": {},
    "outputs": [
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "0b501ed2-5973-4132-b3b1-eb7094c14aaa",
    "metadata": {},
    "outputs": [
@@ -1344,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "572910ee-326f-48c1-8450-902dc81868d1",
    "metadata": {},
    "outputs": [
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "2497361c-3d5e-4cc3-8240-2229c38341be",
    "metadata": {},
    "outputs": [
@@ -1422,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "8ae597ed-e170-40cd-b3c8-14488c19ded2",
    "metadata": {},
    "outputs": [
