--- a/content/data_science/2024-fall/Tutorial.ipynb
+++ b/content/data_science/2024-fall/Tutorial.ipynb
@@ -70,12 +70,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python 3.11.9\n"
+      "3.11.9 | packaged by conda-forge | (main, Apr 19 2024, 18:36:13) [GCC 12.3.0]\n"
      ]
     }
    ],
    "source": [
-    "!python --version"
+    "# !python --version\n",
+    "\n",
+    "import sys\n",
+    "print(sys.version)"
    ]
   },
   {
@@ -100,9 +103,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 7, 7, 7, 7, 7, 7, 7, 7, 7, 8, 8, 8, 8, 8, 8, 8, 8, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 10, 10]\n",
-      "CPU times: user 5.5 ms, sys: 0 ns, total: 5.5 ms\n",
-      "Wall time: 5.42 ms\n"
+      "[1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5, 5, 5, 5, 5, 5, 5, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 8, 8, 8, 8, 8, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 10, 10, 10, 10, 10, 10, 10, 10, 11, 11, 11, 11, 11, 11, 12, 12, 12, 12]\n",
+      "CPU times: user 6.16 ms, sys: 0 ns, total: 6.16 ms\n",
+      "Wall time: 6.13 ms\n"
      ]
     }
    ],
@@ -131,9 +134,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 7, 7, 7, 7, 7, 7, 7, 7, 7, 8, 8, 8, 8, 8, 8, 8, 8, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 10, 10]\n",
-      "CPU times: user 2.2 s, sys: 0 ns, total: 2.2 s\n",
-      "Wall time: 2.2 s\n"
+      "[1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5, 5, 5, 5, 5, 5, 5, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 8, 8, 8, 8, 8, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 10, 10, 10, 10, 10, 10, 10, 10, 11, 11, 11, 11, 11, 11, 12, 12, 12, 12]\n",
+      "CPU times: user 2.56 s, sys: 3.28 ms, total: 2.56 s\n",
+      "Wall time: 2.57 s\n"
      ]
     }
    ],
@@ -876,8 +879,8 @@
       " [7 7]]\n",
       "[[1. 0.]\n",
       " [0. 1.]]\n",
-      "[[0.10820736 0.93265503]\n",
-      " [0.2792792  0.97664304]]\n"
+      "[[0.06103365 0.75649928]\n",
+      " [0.59906906 0.4992057 ]]\n"
      ]
     }
    ],
