--- a/content/data_science/2024-fall/W2_Data_Mining_Process.ipynb
+++ b/content/data_science/2024-fall/W2_Data_Mining_Process.ipynb
@@ -53,8 +53,8 @@
    },
    "outputs": [],
    "source": [
-    "# !conda install -y pandas matplotlib seaborn scikit-learn\n",
-    "# !pip install -y pandas matplotlib seaborn scikit-learn"
+    "# !conda install -y pandas matplotlib seaborn scikit-learn cartopy squarify networkx\n",
+    "# !pip install -y pandas matplotlib seaborn scikit-learn cartopy squarify networkx"
    ]
   },
   {
@@ -3486,7 +3486,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_760154/1366205902.py:3: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "/tmp/ipykernel_3268676/1366205902.py:3: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  housing_df.groupby('BEDROOMS', group_keys=False).apply(lambda x: x.sample(min(len(x), 5)))\n"
      ]
     },
