--- a/content/data_science/2024-fall/W2_Data_Mining_Process.ipynb
+++ b/content/data_science/2024-fall/W2_Data_Mining_Process.ipynb
@@ -72,7 +72,7 @@
     }
    ],
    "source": [
-    "%pip install -q seaborn squarify pyarrow"
+    "%pip install -q seaborn squarify"
    ]
   },
   {
